plugins {
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id 'war'
}

ext {
	file_name_build = 'piastria-wss-build.war'
	file_name_prod = 'piastria-wss.war'
	file_name_int = 'piastria-int-wss.war'
}

group = 'com.romanpulov'
version = '0.9.0'

bootWar {
	archiveFileName = file_name_build
}

processResources {
	def expandProperties = project.properties
	filesMatching('gr.properties') {
		expand(expandProperties)
	}
}

repositories {
	mavenCentral()
	mavenLocal()
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-aspectj'
	implementation 'org.springframework.retry:spring-retry:2.0.12'

	//dialects to support SQLite
	implementation 'org.hibernate.orm:hibernate-community-dialects'

	implementation 'org.xerial:sqlite-jdbc:3.46.0.0'

	//core
	implementation 'com.romanpulov:jutils-core:0.5.3'

	//turso
	implementation 'com.romanpulov:turso-core:0.1.0'
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
	implementation 'org.json:json:20231013'

	testRuntimeOnly 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
}

test {
	useJUnitPlatform()
}

apply from: '../common/gradle/tomcat.config.gradle'

tasks.register('deployInt', Copy) {
	dependsOn(bootWar)
	from "build/libs"
	into tomcat_webapps
	include file_name_build
	rename file_name_build, file_name_int
}

tasks.register('deployProd', Copy) {
	dependsOn(bootWar)
	from "build/libs"
	into tomcat_webapps
	include file_name_build
	rename file_name_build, file_name_prod
}

tasks.register('printProps') {
	doLast {
		println tomcat_webapps
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-Xlint:deprecation']
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'integration'
	}
}

tasks.register('integrationTest', Test) {
	description = 'Runs integration tests against real services.'
	group = 'verification'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	outputs.upToDateWhen { false }

	// to use the same JVM as used for running daemon
	javaLauncher.set(javaToolchains.launcherFor {
		languageVersion = JavaLanguageVersion.of(JavaVersion.current().majorVersion.toInteger())
		vendor = JvmVendorSpec.matching(System.getProperty("java.vendor"))
	})

	useJUnitPlatform {
		includeTags 'integration'
	}
	testLogging {
		events "passed", "skipped", "failed"
		showStandardStreams = true
	}
}
